<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11293f"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="97"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".17"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/jabber"
                    android:textColor='#f2e9eb'
                    android:textSize="65dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:gravity="center_horizontal|center_vertical">

            <EditText
                android:id="@+id/first_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#f2e9eb"
                android:textSize="19dp"
                android:backgroundTint="#f2e9eb"
                android:hint="@string/prompt_first_name"
                android:textColorHint="#f2e9eb"
                android:selectAllOnFocus="true"
                android:imeOptions="actionDone"
                android:layout_marginLeft="36dp"
                android:inputType="textPersonName"
                android:layout_marginRight="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:gravity="center_horizontal|center_vertical">
            <EditText
                android:id="@+id/last_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:textColor="#f2e9eb"
                android:textSize="19dp"
                android:backgroundTint="#f2e9eb"
                android:imeOptions="actionDone"
                android:hint="@string/prompt_last_name"
                android:textColorHint="#f2e9eb"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <EditText
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:textColor="#f2e9eb"
                    android:textSize="19dp"
                    android:imeOptions="actionDone"
                    android:backgroundTint="#f2e9eb"
                    android:hint="@string/prompt_email"
                    android:inputType="textUri"
                    android:textColorHint="#f2e9eb"
                    android:selectAllOnFocus="true" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">
                <TextView
                    android:id="@+id/textIncorrectEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:text="@string/invalid_email"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:textColor="#f2e9eb"
                    android:textSize="19dp"
                    android:layout_marginEnd="36dp"
                    android:textColorHint="#f2e9eb"
                    android:backgroundTint="#f2e9eb"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">
                <TextView
                    android:id="@+id/password_invalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:text="@string/password_requirements"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <EditText
                    android:id="@+id/confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:textColor="#f2e9eb"
                    android:textSize="19dp"
                    android:layout_marginEnd="36dp"
                    android:textColorHint="#f2e9eb"
                    android:backgroundTint="#f2e9eb"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">
                <TextView
                    android:id="@+id/invalidPasswordMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:text="@string/password_match"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="19"
            app:layout_constraintTop_toBottomOf="@+id/btnRemember"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"

                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="@color/mapbox_blue"
                    android:background="@drawable/round_button_white"
                    android:enabled="true"
                    android:text="@string/register" />

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <ProgressBar
                android:id="@+id/loading_register"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>