<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:textColor='@android:color/white'>
    </TextView>

    <LinearLayout

        android:layout_weight="0.04"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"/>

        <Button
            android:id="@+id/b_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#004f4f4f"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/new_account_login"
            android:textColor="#f2e9eb"></Button>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".17"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/jabber"
        android:textColor='#f2e9eb'
        android:textSize="85dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".17"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".03"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/by_continuing_you_agree_to_out_terms_and_privacy_policy"
        android:textColor='#f2e9eb'
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".06"
        />

    <LinearLayout

        android:layout_weight="0.05"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/tv_Select_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:layout_gravity="center_horizontal"
                android:background="#004f4f4f"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/select_your_age"
                android:textColor='#f2e9eb'
                android:textSize="20sp" >
            </Button>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        />

    <NumberPicker
        android:id="@+id/np_Age"
        android:textColor="#f2e9eb"
        android:textSize="20sp"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />









</LinearLayout>